--- a/ansible_jenkins_slave/ansible.cfg
+++ b/ansible_jenkins_slave/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 remote_user    = ubuntu
-private_key_file = ./mynewkey.pem
+private_key_file = "pass here your private key" or you can use --private-key "key" , while using adhoc command ansible-playbook "file-name"
 sudo_user      = root
 host_key_checking = False  
 
